--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,6 +3,7 @@
    display: flex;
    flex-direction: row;
    height: 50px;
+   color: black;
    
 
 }
@@ -13,15 +14,37 @@
     cursor: pointer;
     font-size: 25px;
     font-weight: bold;
+
+}
+.l{
+    color:black;
+    text-decoration: none;
 }
 .Right{
     margin-top: 10px;
     display: flex;
     flex: 1;
     justify-content: space-around;
+    cursor: pointer;
 }
 .itemright{
     font-size: 15px;
+}
+.navhome{
+    color: black;
+    text-decoration: none;
+}
+.navskills{
+    color: black;
+    text-decoration: none;
+}
+.navprojects{
+    color: black;
+    text-decoration: none;
+}
+.navcontact{
+    color: black;
+    text-decoration: none;
 }
 @media only screen and (max-width: 600px) {
     .navbarcontainer{
